mprj transmition will trigger interrupt sending data through uart to juipyter notebook

--- a/Lab6/vivado/jupyter_notebook/caravel_fpga_uart.ipynb
+++ b/Lab6/vivado/jupyter_notebook/caravel_fpga_uart.ipynb
@@ -89,12 +89,12 @@
        }
       },
       "text/plain": [
-       "{'axi_intc_0/intr': {'controller': 'axi_intc_0',\n",
+       "{'axi_uartlite_0/interrupt': {'controller': 'axi_intc_0',\n",
        "  'index': 0,\n",
-       "  'fullpath': 'axi_intc_0/intr'},\n",
-       " 'axi_uartlite_0/interrupt': {'controller': 'axi_intc_0',\n",
+       "  'fullpath': 'axi_uartlite_0/interrupt'},\n",
+       " 'axi_intc_0/intr': {'controller': 'axi_intc_0',\n",
        "  'index': 0,\n",
-       "  'fullpath': 'axi_uartlite_0/interrupt'}}"
+       "  'fullpath': 'axi_intc_0/intr'}}"
       ]
      },
      "execution_count": 4,
@@ -283,36 +283,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def uart_rxtx():\n",
+    "async def uart_rx():\n",
     "    # Reset FIFOs, enable interrupts\n",
     "    ipUart.write(CTRL_REG, 1<<RST_TX | 1<<RST_RX | 1<<INTR_EN)\n",
     "    print(\"Waitting for interrupt\")\n",
-    "    tx_str = \"hello\\n\"\n",
-    "    ipUart.write(TX_FIFO, ord(tx_str[0]))\n",
-    "    i = 1\n",
     "    while(True):\n",
     "        await intUart.wait()\n",
-    "        buf = \"\"\n",
     "        # Read FIFO until valid bit is clear\n",
     "        while ((ipUart.read(STAT_REG) & (1<<RX_VALID))):\n",
-    "            buf += chr(ipUart.read(RX_FIFO))\n",
-    "            if i<len(tx_str):\n",
-    "                ipUart.write(TX_FIFO, ord(tx_str[i]))\n",
-    "                i=i+1\n",
-    "        print(buf, end='')\n",
+    "            uart_val = ipUart.read(RX_FIFO)\n",
+    "            if(uart_val == ord('\\n')):\n",
+    "                print()\n",
+    "            else:\n",
+    "                print(f\"{uart_val:02x}\", end=' ')\n",
+    "\n",
+    "async def uart_tx():\n",
+    "    await asyncio.sleep(1)\n",
+    "    ipUart.write(CTRL_REG, 1<<RST_TX | 1<<RST_RX | 1<<INTR_EN)\n",
+    "    tx_str = \"Done Homework\\n\"\n",
+    "    i = 0\n",
+    "\n",
+    "    while (True):\n",
+    "        if(i<len(tx_str)):\n",
+    "            ipUart.write(TX_FIFO, ord(tx_str[i]))\n",
+    "            await intUart.wait()\n",
+    "            while ((ipUart.read(STAT_REG) & (1<<TX_FULL))):\n",
+    "                pass\n",
+    "            i=i+1\n",
+    "            await asyncio.sleep(0.5)\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "                \n",
     "        \n",
     "async def caravel_start():\n",
     "    ipOUTPIN.write(0x10, 0)\n",
     "    print(\"Start Caravel Soc\")\n",
     "    ipOUTPIN.write(0x10, 1)\n",
-    "\n",
-    "async def caravel_read_ps_mprj_out():\n",
-    "    while(ipPS.read(0x24) & 0x01): # ps_mprj_out_ap_vld\n",
-    "        print (\"mprj_out[31:0] = \", hex(ipPS.read(0x1c)))\n",
     "\n",
     "# Python 3.5+\n",
     "#tasks = [ # Create a task list\n",
@@ -330,20 +341,23 @@
     "# Python 3.7+\n",
     "async def async_main(): \n",
     "    task2 = asyncio.create_task(caravel_start()) \n",
-    "    task1 = asyncio.create_task(uart_rxtx())\n",
-    "    task3 = asyncio.create_task(caravel_read_ps_mprj_out())\n",
+    "    task3 = asyncio.create_task(uart_tx())\n",
+    "    task1 = asyncio.create_task(uart_rx())\n",
+    "    \n",
     "    # Wait for 5 second\n",
-    "    await asyncio.sleep(10)\n",
+    "    await asyncio.sleep(15)\n",
     "    task1.cancel()\n",
+    "    task3.cancel()\n",
     "    try:\n",
     "        await task1\n",
+    "        await task3\n",
     "    except asyncio.CancelledError:\n",
     "        print('main(): uart_rx is cancelled now')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +366,39 @@
      "text": [
       "Start Caravel Soc\n",
       "Waitting for interrupt\n",
-      "hello\n",
+      "ab 11 \n",
+      "00 3e \n",
+      "00 44 \n",
+      "00 4a \n",
+      "00 50 \n",
+      "ab 19 \n",
+      "ab 21 \n",
+      "00 28 \n",
+      "03 7d \n",
+      "09 ed \n",
+      "\n",
+      "6d \n",
+      "0c a1 \n",
+      "10 ab \n",
+      "12 0e \n",
+      "16 31 \n",
+      "17 87 \n",
+      "23 71 \n",
+      "ab 29 \n",
+      "ab 31 \n",
+      "00 00 \n",
+      "ff f6 \n",
+      "ff e3 \n",
+      "ff e7 \n",
+      "00 23 \n",
+      "00 9e \n",
+      "01 51 \n",
+      "02 1b \n",
+      "02 dc \n",
+      "03 93 \n",
+      "04 4a \n",
+      "ab 39 \n",
+      "44 6f 6e 65 20 48 6f 6d 65 77 6f 72 6b \n",
       "main(): uart_rx is cancelled now\n"
      ]
     }
@@ -449,9 +495,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0x10 =  0x0\n",
+      "0x14 =  0x0\n",
+      "0x1c =  0xab390040\n",
+      "0x20 =  0x0\n",
+      "0x34 =  0x20\n",
+      "0x38 =  0x3f\n"
+     ]
+    }
+   ],
    "source": [
     "print (\"0x10 = \", hex(ipPS.read(0x10))) # Data signal of ps_mprj_in[31:0]\n",
     "print (\"0x14 = \", hex(ipPS.read(0x14))) # Data signal of ps_mprj_in[37:32]\n",
